Mon Sep 15 07:05:31 2003  Chad Elliott  <elliott_c@ociweb.com>

        * tao/RTCORBA/RTCORBA.mpc:

          Added a requires of rt_corba to the RTCORBA project.

Sun Sep 14 17:01:31 2003  George Edwards <g.edwards@vanderbilt.edu>

        * tests/OBV/Supports/Supports_Test_impl.cpp:
        * tests/OBV/Supports/Supports_Test_impl.h:
        * tests/OBV/Supports/README:

          Fixed compilation error due to incomplete mutex type declaration
          in single-threaded builds. Updated documentation.

Fri Sep 12 15:13:31 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/examples/Notify/Lanes/Supplier.dsp:
        * orbsvcs/examples/Notify/ThreadPool/Supplier.dsp:

          Fixed release configuration settings.

Fri Sep 12 13:36:02 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/RTKokyuEvent.dsp:
        * orbsvcs/examples/RtEC/Kokyu/EC_Schedule_Service.dsp:

          Fixed project settings.

Fri Sep 12 10:58:28 2003  Ossama Othman  <ossama@dre.vanderbilt.edu>

        * orbsvcs/tests/Security/MT_IIOP_SSL/Makefile (SRVR_LIBS):

          Explicitly link the ACE_SSL library to address an unresolved
          symbol link-time error in Solaris Sun CC 5.3 builds.  The
          server binary appears to needs the ACE_SSL_Context::instance()
          method, at least according to the linker error.

Fri Sep 12 12:50:57 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/RTScheduling/Current/Current.dsp:
        * tests/RTScheduling/DT_Spawn/DT_Spawn.dsp:
        * tests/RTScheduling/Scheduling_Interceptor/Scheduler_Interceptor_Client.dsp:
        * tests/RTScheduling/Scheduling_Interceptor/Scheduler_Interceptor_Server.dsp:
        * tests/RTScheduling/Thread_Cancel/Thread_Cancel.dsp:
        * tests/RTScheduling/VoidData/VoidData.dsp:

          Fixed release settings, and changed debug settings to link to
          debug multi-threaded DLLs. Also added dependency on
          IDL compiler to all configurations.
